# rifflux

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: research-technical-spike.agent.md
.github/instructions/: agents.instructions.md  python-mcp-server.instructions.md  rifflux-core.instructions.md
.github/prompts/: create-implementation-plan.prompt.md
.github/skills/rifflux-benchmarking/: SKILL.md
.github/skills/rifflux-design/: SKILL.md
docs/: embedding-backend-decision.md  mcp-vs-grep-benchmark.md  rifflux-architecture-and-search.md
scripts/: benchmark_awesome_copilot.py  compare_benchmarks.py  generate_benchmark_report.py  inspect_mcp_tools.py  query.py  rebuild.py  reindex.py
spec/: spec-tool-hybrid-search-contract.md
src/rifflux/: cli.py  config.py
src/rifflux/db/: schema.sql  sqlite_store.py
src/rifflux/embeddings/: embedder_factory.py  hash_embedder.py
src/rifflux/indexing/: background.py  chunker.py  indexer.py  watcher.py
src/rifflux/mcp/: server.py  tools.py
src/rifflux/retrieval/: lexical.py  rrf.py  search.py  semantic.py
tests/: conftest.py  helpers.py  test_background_indexing.py  test_chunker.py  test_chunker_edges.py  test_cli_unit.py  test_embedder_factory.py  test_file_watcher.py  test_mcp_protocol_stdio.py  test_mcp_protocol_streamable_http.py  test_mcp_server_unit.py  test_mcp_tools_contract.py  test_parallel_tools.py  test_resilience.py  test_rrf.py  test_search_modes.py  test_search_smoke.py  test_semantic.py
(+1 files in other folders)
